--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "pg": "^8.7.1"
   },
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12"
   }
