--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "googleapis": "^39.2.0",
     "pg": "^8.7.1"
   },
   "devDependencies": {
