--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "particles.js": "^2.0.0",
     "pg": "^8.7.1"
   },
   "devDependencies": {
